# fmtutil

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  data.json  demo.py  et HEAD^q  index.html  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  questions.yml
.github/workflows/: ci.yml  coverage.yml  docs.yml  publish.yml  tests.yml
CHANGELOG/: index.html
docs/: API.md  CHANGELOG.md  api.md  error_handler.md  example.md  index.md
docs/en/docs/: API.md  CHANGELOG.md
docs/examples/: example.md  search_files.md
docs/features/: formatter_group.md  slot_level.md
docs/features/formatters/: constant.md  datetime.md  formatter.md  (+4 more)
dup_fmt/: __about__.py  __init__.py  cli.py  exceptions.py  formatter.py  objects.py  utils.py
error_handler/: index.html
examples/search_files/: index.html
features/formatter_group/: index.html
features/slot_level/: index.html
fmtutil/: __about__.py  __assets.py  __init__.py  __type.py  __version.py  exceptions.py  formatter.py  utils.py  version.py
fmtutil/migrate/: formatter.py
htmlcov/: d_9a2a6d9bd1099df3___init___py.html  d_9a2a6d9bd1099df3_errors_py.html  d_9a2a6d9bd1099df3_formatter_py.html  d_a44f0ac069e85531_test_errors_py.html  d_a44f0ac069e85531_test_examples_py.html  d_a44f0ac069e85531_test_formatter_datetime_py.html  d_a44f0ac069e85531_test_formatter_group_py.html  d_a44f0ac069e85531_test_formatter_naming_py.html  d_a44f0ac069e85531_test_formatter_order_py.html  d_a44f0ac069e85531_test_formatter_py.html  d_a44f0ac069e85531_test_formatter_serial_py.html  d_a44f0ac069e85531_test_formatter_version_py.html  d_a44f0ac069e85531_test_ralativeserial_py.html  index.html  status.json
scripts/: commit-msg-2.py  commit-msg.py  format.sh  precommit.bat  test.sh  update_changes.py
search/: search_index.json
tests/: demo.py  test_assets_formatter_serial.py  test_errors.py  test_escape.py  test_exception.py  test_formatter.py  test_formatter_constant.py  test_formatter_datetime.py  test_formatter_group.py  test_formatter_group_order.py  test_formatter_naming.py  test_formatter_order.py  test_formatter_serial.py  test_formatter_storage.py  test_formatter_version.py  test_ralativeserial.py  test_utils_escape.py  test_version.py
tests/examples/: test_assets_formatter_serial.py  test_formatter_datetime.py  test_formatter_group.py  test_formatter_naming.py  test_formatter_serial.py  test_formatter_storage.py  test_formatter_version.py
tests/perfs/: perf_load_formatter_datetime.py
(+7 files in other folders)
